--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "雀巢母婴营养e学界直播socket",
   "dependencies": {
     "@types/node": "^14.0.20",
+    "compression": "^1.7.4",
     "express": "^4.15.2",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.6",
