--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/node": "^14.0.20",
     "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.15.2",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.6",
