--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.3.2",
     "@nestjs/websockets": "^7.3.2",
+    "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
+    "hbs": "^4.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
