--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "hbs": "^4.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "socket.io-redis": "^5.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
