--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.3.2",
+    "@nestjs/serve-static": "^2.1.3",
     "@nestjs/websockets": "^7.3.2",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
