--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.3.2",
     "@nestjs/serve-static": "^2.1.3",
+    "@nestjs/typeorm": "^7.1.0",
     "@nestjs/websockets": "^7.3.2",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
     "hbs": "^4.1.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "socket.io-redis": "^5.3.0"
+    "socket.io-redis": "^5.3.0",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
