--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/typeorm": "^7.1.0",
     "@nestjs/websockets": "^7.3.2",
+    "class-validator": "^0.12.2",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
     "hbs": "^4.1.1",
