--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.3.2",
     "@nestjs/serve-static": "^2.1.3",
+    "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
     "@nestjs/websockets": "^7.3.2",
     "class-validator": "^0.12.2",
@@ -37,6 +38,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "socket.io-redis": "^5.3.0",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
